discussion/kv_engine/185544/185544_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Fix backfill that begins within the history window

The initial code for MB-54729 was flawed and did not correctly support
a change stream backfill when the start lands inside the history
window.

The sequence numbers which are recorded and then used in the history
scan were incorrect, meaning the history scan was breaking monotonic
expectations of the DCP producer.

A new test covers the broken case.

Change-Id: I0d3c7cef71ad15c390401b018270f5daf7c3c9c2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-26 11:16:01.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-26 11:16:18.000000000
Message: 
Patch Set 6: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334386/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-26 11:51:21.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/938/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:310:34: error: out-of-line definition of "HistoryScanCtx" does not match any declaration in "DCPBackfillDisk::HistoryScanCtx" [clang-diagnostic-error]
DCPBackfillDisk::HistoryScanCtx::HistoryScanCtx(snapshot_info_t snapshotInfo)
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.h:167:24: error: unknown type name "snapshot_info_t" [clang-diagnostic-error]
        HistoryScanCtx(snapshot_info_t snapshotInfo);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.h:183:9: error: unknown type name "snapshot_info_t" [clang-diagnostic-error]
        snapshot_info_t snapshotInfo;
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "DCPBackfillDisk::HistoryScanCtx" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:260:28: note: in instantiation of function template specialization "std::make_unique<DCPBackfillDisk::HistoryScanCtx, snapshot_info_t>" requested here
        historyScan = std::make_unique<HistoryScanCtx>(snapshot_info_t{
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.h:160:12: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "snapshot_info_t" to "const DCPBackfillDisk::HistoryScanCtx" for 1st argument
    struct HistoryScanCtx {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.h:160:12: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/938/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:310:34:
error: out-of-line definition of "HistoryScanCtx" does not match any declaration in "DCPBackfillDisk::HistoryScanCtx" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/938/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/908/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill_disk.h:167:24:
error: unknown type name "snapshot_info_t"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/908/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1242/ : FAILURE

Failure of GoogleTest "ExecutorPoolTest/0.Wake":

<pre>
[ RUN      ] ExecutorPoolTest/0.Wake
[2023-01-26T11:37:05.920Z] [       OK ] ExecutorPoolTest/0.Wake (1 ms)
[2023-01-26T11:37:05.920Z] [ RUN      ] ExecutorPoolTest/0.WakeMultiple
[2023-01-26T11:37:05.920Z] [       OK ] ExecutorPoolTest/0.WakeMultiple (1 ms)
[2023-01-26T11:37:05.921Z] [ RUN      ] ExecutorPoolTest/0.WakeWithoutSchedule
[2023-01-26T11:37:05.921Z] [       OK ] ExecutorPoolTest/0.WakeWithoutSchedule (1 ms)
[2023-01-26T11:37:05.921Z] [ RUN      ] ExecutorPoolTest/0.WakeUpdatesWaketime
[2023-01-26T11:37:05.921Z] [       OK ] ExecutorPoolTest/0.WakeUpdatesWaketime (1 ms)
[2023-01-26T11:37:05.921Z] [ RUN      ] ExecutorPoolTest/0.Snooze
[2023-01-26T11:37:05.921Z] [       OK ] ExecutorPoolTest/0.Snooze (1 ms)
[2023-01-26T11:37:05.921Z] [ RUN      ] ExecutorPoolTest/0.SnoozeThenWake
[2023-01-26T11:37:05.921Z] [       OK ] ExecutorPoolTest/0.SnoozeThenWake (22 ms)
[2023-01-26T11:37:05.921Z] [ RUN      ] ExecutorPoolTest/0.WakeSetsTaskRunning
[2023-01-26T11:37:05.921Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:551: Failure
[2023-01-26T11:37:05.921Z] Expected equality of these values:
[2023-01-26T11:37:05.921Z]   task_state_t::TASK_RUNNING
[2023-01-26T11:37:05.921Z]     Which is: RUNNING
[2023-01-26T11:37:05.921Z]   task->getState()
[2023-01-26T11:37:05.921Z]     Which is: DEAD
[2023-01-26T11:37:05.921Z] [  FAILED  ] ExecutorPoolTest/0.WakeSetsTaskRunning, where TypeParam = TestExecutorPool (2 ms)
ExecutorPoolTest/0.Wake
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1242/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/958/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.Mcbp/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.Mcbp/Mcbp
[2023-01-26T11:50:25.680Z] unknown file: Failure
[2023-01-26T11:50:25.680Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for IFCONFIG" thrown in the test body.
[2023-01-26T11:50:25.680Z] [  FAILED  ] TransportProtocols/InterfacesTest.Mcbp/Mcbp, where GetParam() = Mcbp (2041 ms)
TransportProtocols/InterfacesTest.Mcbp/Mcbp
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/958/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1125/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22386/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/951/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/930/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/960/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/950/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/948/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
